force-app/main/default/objects/Billing__c/Billing__c.object-meta.xml
<CustomObject>
    <label>Billing(OPD&amp;IP)</label>
    <nameField>
        <label>Billing(OPD&amp;IP)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>