force-app/main/default/objects/Billing__c/fields/Bill_Id_No__c.field-meta.xml
<CustomField>
    <fullName>Bill_Id_No__c</fullName>
    <label>Bill Id No</label>
    <type>AutoNumber</type>
</CustomField>