force-app/main/default/objects/Billing__c/fields/Room_ChargesIP__c.field-meta.xml
<CustomField>
    <fullName>Room_ChargesIP__c</fullName>
    <label>Room Charges(IP)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>