force-app/main/default/objects/Billing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Bill_Id_No__c</columns>
    <columns>Patient_Name__c</columns>
    <columns>Contact_Number__c</columns>
    <columns>Doctor_Name__c</columns>
    <columns>Consultation_Fees__c</columns>
    <columns>Room_ChargesIP__c</columns>
    <columns>Other_Charges_IP__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>